--- a/v4posme_maui/Views/Abonos/01CustomersPage.xaml
+++ b/v4posme_maui/Views/Abonos/01CustomersPage.xaml
@@ -85,9 +85,12 @@
                                                              Aspect="Fill" />
                                             </Frame>
                                             <Label Grid.Column="1" Grid.Row="0" FontAttributes="Bold"
-                                                   Grid.ColumnSpan="2"
                                                    TextColor="White"
                                                    Text="{Binding Identification}" />
+                                            <Label Grid.Column="2" Grid.Row="0"
+                                                   FontAttributes="Bold"
+                                                   TextColor="White"
+                                                   Text="{Binding FirstBalanceDate, StringFormat='{0:yyyy-MM-dd}'}"/>
                                             <HorizontalStackLayout Grid.Column="1" Grid.Row="1">
                                                 <Label Text="{Binding CustomerNumber}"
                                                        TextColor="White"
